force-app/main/default/objects/User/fields/ApplyNowwebsiteLink__c.field-meta.xml
<CustomField>
    <fullName>ApplyNowwebsiteLink__c</fullName>
    <label>Apply Now website Link</label>
    <type>Url</type>
</CustomField>