force-app/main/default/objects/User/fields/encompass_By_EM__User_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__User_Id__c</fullName>
    <label>Encompass User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>