force-app/main/default/objects/User/fields/Encompass_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Encompass_User_Email__c</fullName>
    <inlineHelpText>Email listed in encompass for salesforce user matching</inlineHelpText>
    <label>Encompass User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>