force-app/main/default/objects/User/fields/MLSNumber__c.field-meta.xml
<CustomField>
    <fullName>MLSNumber__c</fullName>
    <label>NMLS Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>